NOT COMMITTED YET (OR EXPERIMENTAL):
====================================

Emacs-mode:

Shell-script: 

 * write in .waux and read in .raux to be stable in face of errors

LaTeX macros:

 * write in .waux and read in .raux to be stable in face of errors

Installation/Documentation:


SINCE LAST RELEASE:
===================

Emacs-mode:

 - version 1.2.0 
 * fixed ^ in middle of whizzy-mode-regexp-alist
 * test for the file associated to the buffer already exists.
 * small slices can be automatically enlarged to fit some number of pages
 * does not shrink log during initialization and save it at the end
 * changed names of configuration files whizzy.el 
 * fix a bug in parsing -dvicopy file-configuration. 
 * added whizzy-auto-recompile function to set corresponding variable.
 - version 1.1.3
 * overlays are now variables and can now be customized.
 * changed whizzy-edit API.
 * added -display option.

Shell-script: 

 - version 1.2.0 
 * diplay VERSION number with option -version and command info.
 * allow spaces in directory names (not in the filename itself).
 * changed names of configuration files whizzy.sh 
 * added a flag during initialization, so as to keep debugging information
 * added AUTOCOMPILE and AUTORECOMPILE variables.
 * removed obsolete DOMARKS.
 - version 1.1.3
 * added internal duplex mode if MULTIPLE files can be viewed altogether
 * added -display option 

LaTeX macros:

 - version 1.2.0 
 * fixed display of cursor in vmode.
 * small slice can be automatically enlarged to fit some number of pages.
 * changed names of configuration files whizzy.sty
 - version 1.1.3
 * changed whizzy-edit interface
 * \WhizzyInsideEnvironment to change the behavior when the cursor is inside.

Installation/Documentation:

 - version 1.2.0 
 * configuration, customization
 * added a redhat noarch.rpm (spec file provided by Jakuv Narebski)
 * fixed Makefile
 * whizzy-edition: documentation and examples.
 - version 1.1.3